Интеграция Google Calendar API (демо)

--- a/templates/grade_solution.html
+++ b/templates/grade_solution.html
@@ -87,6 +87,8 @@
         }
 
         textarea {
+            width: calc(100%);
+            box-sizing: border-box;
             height: 100px;
             resize: vertical;
         }
