--- a/templates/index.html
+++ b/templates/index.html
@@ -73,7 +73,8 @@
         }
 
         .form-control {
-            width: 100%;
+            width: calc(100%);
+            box-sizing: border-box;
             padding: 12px;
             background: rgba(120, 120, 130, 0.2);
             border: 1px solid rgba(255, 255, 255, 0.1);
