--- a/templates/register_teacher.html
+++ b/templates/register_teacher.html
@@ -115,6 +115,8 @@
         }
 
         .school-code-group {
+            width: calc(100%);
+            box-sizing: border-box;
             display: flex;
             align-items: center;
             margin: 15px 0 25px 35px;
@@ -128,6 +130,8 @@
         }
 
         .school-code-group input {
+            width: calc(100%);
+            box-sizing: border-box;
             flex-grow: 1;
             padding: 12px;
             background: rgba(120, 120, 130, 0.2);
