--- a/templates/student_task.html
+++ b/templates/student_task.html
@@ -68,7 +68,8 @@
         }
 
         textarea {
-            width: 100%;
+            width: calc(100%);
+            box-sizing: border-box;
             height: 150px;
             padding: 12px;
             background: rgba(120, 120, 130, 0.2);
