--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>{{ title }}</title>
+    <link rel="icon" href="/img/favicon.ico">
     <style>
         @font-face {
             font-family: 'SF Pro';
